--- a/app/src/main/res/layout/activity_dialogs.xml
+++ b/app/src/main/res/layout/activity_dialogs.xml
@@ -2,7 +2,7 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/allPages"
+    style="@style/DefaultTheme"
     tools:context="com.bunbeauty.ideal.myapplication.clean_architecture.mvp.activities.chat.DialogsActivity">
 
     <com.google.android.material.appbar.AppBarLayout
