--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/allPages"
+    style="@style/DefaultTheme"
     tools:context="com.bunbeauty.ideal.myapplication.clean_architecture.mvp.activities.search_service.MainScreenActivity">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -29,18 +29,20 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                    <FrameLayout style="@style/wideHorizontalBlock">
 
                         <include layout="@layout/part_top_panel" />
 
                         <com.miguelcatalan.materialsearchview.MaterialSearchView
                             android:id="@+id/activity_main_screen_msv_search"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            app:layout_constraintTop_toTopOf="@+id/topPanelLayout" />
-                    </androidx.constraintlayout.widget.ConstraintLayout>
+                            android:layout_height="@dimen/search_height"
+                            android:layout_gravity="center"
+                            android:hint="@string/search"
+                            android:textColorHint="@color/grey"
+                            app:layout_constraintTop_toTopOf="@+id/topPanelLayout"
+                            app:searchBackIcon="@drawable/icon_back_blue" />
+                    </FrameLayout>
                     <!-- Категории -->
                     <HorizontalScrollView
                         android:id="@+id/activity_main_screen_sv_category"
@@ -78,34 +80,7 @@
                                 android:layout_height="match_parent"
                                 android:gravity="center"
                                 android:orientation="horizontal" />
-
                         </HorizontalScrollView>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal">
-
-                            <com.google.android.material.button.MaterialButton
-                                android:id="@+id/activity_main_screen_btn_close"
-                                style="@style/lightBlueButton"
-                                android:layout_width="wrap_content"
-                                android:layout_height="36dp"
-                                android:layout_weight="1"
-                                android:fontFamily="@font/font_awesome_solid"
-                                android:gravity="center"
-                                android:text="" />
-
-                            <com.google.android.material.button.MaterialButton
-                                android:id="@+id/activity_main_screen_btn_clear"
-                                style="@style/lightBlueButton"
-                                android:layout_width="wrap_content"
-                                android:layout_height="36dp"
-                                android:layout_weight="1"
-                                android:fontFamily="@font/font_awesome_solid"
-                                android:gravity="center"
-                                android:text="" />
-                        </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
             </com.google.android.material.appbar.CollapsingToolbarLayout>
@@ -139,7 +114,7 @@
         android:id="@+id/activity_main_screen_tv_empty"
         style="@style/infoText"
         android:gravity="center"
-        android:text="В вашем регионе нет услуг :("
+        android:text="@string/no_services_in_your_region"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
