--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <com.bunbeauty.ideal.myapplication.clean_architecture.mvp.CustomGridLayout
+            <com.bunbeauty.ideal.myapplication.clean_architecture.mvp.custom.CustomGridLayout
                 android:id="@+id/daysScheduleGrid"
                 style="@style/horizontalLayout"
                 android:columnCount="7">
@@ -54,7 +54,7 @@
                 <TextView
                     style="@style/weekDayText"
                     android:text="ВС" />
-            </com.bunbeauty.ideal.myapplication.clean_architecture.mvp.CustomGridLayout>
+            </com.bunbeauty.ideal.myapplication.clean_architecture.mvp.custom.CustomGridLayout>
 
             <LinearLayout
                 android:id="@+id/timeScheduleLayout"
@@ -67,7 +67,7 @@
                     android:text="Время"
                     app:layout_constraintBottom_toTopOf="@+id/saveScheduleButton" />
 
-                <com.bunbeauty.ideal.myapplication.clean_architecture.mvp.CustomGridLayout
+                <com.bunbeauty.ideal.myapplication.clean_architecture.mvp.custom.CustomGridLayout
                     android:id="@+id/timeScheduleGrid"
                     style="@style/horizontalLayout"
                     android:columnCount="6" />
