--- a/app/src/main/res/layout/activity_verify_phone_number.xml
+++ b/app/src/main/res/layout/activity_verify_phone_number.xml
@@ -1,122 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/logInPage"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:id="@+id/verifyPhoneNumberLayout"
+    style="@style/logInPage"
+    android:gravity="center"
+    android:orientation="vertical"
     tools:context="com.bunbeauty.ideal.myapplication.clean_architecture.mvp.activities.log_in.VerifyPhoneNumberActivity">
 
+    <!--<ImageView
+        android:id="@+id/logoVerifyImage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        app:srcCompat="@drawable/bun_beauty" />-->
+
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/materialLoginInputLayout"
+        android:hint="@string/phone"
+        app:startIconDrawable="@drawable/icon_phone_number">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/phoneVerifyPhoneInput"
+            style="@style/materialLoginInput"
+            android:enabled="false"
+            android:focusable="false"
+            android:inputType="number"
+            android:textColor="@color/white50" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:id="@+id/changePhoneVerifyPhoneText"
+        style="@style/loginPackageText"
+        android:text="@string/change_number" />
+
+    <TextView
+        android:id="@+id/alertCodeVerifyText"
+        style="@style/extraText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="На указанный номер \n был отправлен код подтверждения" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/materialLoginInputLayout"
+        android:hint="Код"
+        app:startIconDrawable="@drawable/icon_sms_code">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/codeVerifyPhoneInput"
+            style="@style/materialLoginInput"
+            android:inputType="number" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
     <LinearLayout
-        style="@style/loginPackageMainLinearLayout"
-        app:layout_constraintBottom_toTopOf="@+id/bottomLayoutVerifyPhoneLayout"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:id="@+id/logoVerifyImage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            app:srcCompat="@drawable/bun_beauty" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/materialLoginInputLayout"
-            android:hint="@string/phone"
-            app:startIconDrawable="@drawable/icon_phone_number">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/phoneVerifyPhoneInput"
-                style="@style/materialLoginInput"
-                android:enabled="false"
-                android:focusable="false"
-                android:inputType="number"
-                android:textColor="@color/white50" />
-
-        </com.google.android.material.textfield.TextInputLayout>
+        style="@style/wideHorizontalBlock"
+        android:layout_marginTop="10dp">
 
         <TextView
-            android:id="@+id/changePhoneVerifyPhoneText"
-            style="@style/loginPackageText"
-            android:text="@string/change_number" />
-
-        <TextView
-            android:id="@+id/alertCodeVerifyText"
             style="@style/extraText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="На указанный номер \n был отправлен код подтверждения" />
+            android:layout_marginEnd="5dp"
+            android:layout_weight="1"
+            android:gravity="end"
+            android:text="Не получили sms?" />
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/materialLoginInputLayout"
-            android:hint="Код"
-            app:startIconDrawable="@drawable/icon_sms_code">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/codeVerifyPhoneInput"
-                style="@style/materialLoginInput"
-                android:inputType="number" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <LinearLayout
-            style="@style/loginPackageLinearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="0dp">
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            style="@style/loginPackageLinearLayout"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal">
-
-            <TextView
-                style="@style/extraText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="5dp"
-                android:layout_weight="1"
-                android:gravity="end"
-                android:text="Не получили sms?" />
-
-            <TextView
-                android:id="@+id/resendCodeVerifyPhoneText"
-                style="@style/loginPackageText"
-                android:layout_marginStart="5dp"
-                android:layout_weight="1"
-                android:gravity="start"
-                android:text="@string/resendCode" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/resendCodeVerifyPhoneText"
+            style="@style/loginPackageText"
+            android:layout_marginStart="5dp"
+            android:layout_weight="1"
+            android:gravity="start"
+            android:text="@string/resendCode" />
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/bottomLayoutVerifyPhoneLayout"
+    <ProgressBar
+        android:id="@+id/activity_verify_phone_number_pb_loading"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        android:indeterminateTint="@color/white"
+        android:paddingTop="48dp" />
 
-        <ProgressBar
-            android:id="@+id/loadingVerifyPhoneProgressBar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:indeterminateTint="@color/white" />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/verifyVerifyPhoneBtn"
+        style="@style/loginButton"
+        android:text="Войти" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/verifyVerifyPhoneBtn"
-            style="@style/loginButton"
-            android:text="Войти" />
-    </LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
