--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,9 @@
     <dimen name="photo_avatar_height">48dp</dimen>
 
     <dimen name="bottom_panel_height">56dp</dimen>
+    <dimen name="top_panel_height">64dp</dimen>
+
+    <dimen name="search_height">64dp</dimen>
 
     <!-- Schedule activity -->
     <dimen name="schedule_button_height">36dp</dimen>
