--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,11 +11,11 @@
         <item name="snackbarStyle">@style/MySnackbar</item>
     </style>
 
-    <style name="MySnackbar" parent="Widget.MaterialComponents.Snackbar">
-        <item name="android:layout_margin">58dp</item>
+    <style name="AppTheme.LoadingScreen">
+        <item name="android:windowBackground">@drawable/screen_loading</item>
     </style>
 
-    <style name="allPages" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="DefaultTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:background">@color/white</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
@@ -58,8 +58,9 @@
 
     <style name="topTitleText">
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:layout_gravity">start|center</item>
         <item name="android:textSize">16sp</item>
         <item name="fontFamily">@font/roboto_bold</item>
     </style>
@@ -227,6 +228,18 @@
         <item name="android:layout_margin">@dimen/default_small_margin</item>
     </style>
 
+    <!-- BARS -->
+
+    <style name="MySnackbar" parent="Widget.MaterialComponents.Snackbar">
+        <item name="android:layout_margin">58dp</item>
+    </style>
+
+    <style name="ratingBar" parent="@android:style/Widget.RatingBar">
+        <item name="android:progressDrawable">@drawable/layer_list_star</item>
+        <item name="android:minHeight">23dip</item>
+        <item name="android:maxHeight">25dip</item>
+    </style>
+
     <!-- IMAGE -->
 
     <style name="profileAvatar">
@@ -239,15 +252,6 @@
     <style name="photoElement">
         <item name="android:layout_width">@dimen/photo_width</item>
         <item name="android:layout_height">@dimen/photo_height</item>
-    </style>
-
-
-    <!-- RATING BAR -->
-
-    <style name="ratingBar" parent="@android:style/Widget.RatingBar">
-        <item name="android:progressDrawable">@drawable/layer_list_star</item>
-        <item name="android:minHeight">23dip</item>
-        <item name="android:maxHeight">25dip</item>
     </style>
 
     <!-- TAB LAYOUT -->
@@ -273,8 +277,6 @@
     </style>
 
     <!-- ======================================================================================= -->
-
-
 
     <!-- Style for icons -->
     <style name="icon">
